--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
         "test" : "tap test/*.js"
     },
     "dependencies" : {
-        "dnode" : ">=0.9.3 <0.10.0"
+        "dnode" : "https://github.com/timoxley/dnode/tarball/master"
     },
     "devDependencies" : {
         "tap" : "0.0.x"
